# DungeonTuber

./: .flake8  .pylintrc  AGENTS.md  DungeonTuber.iss  DungeonTuber.py  DungeonTuber.spec  LICENSE  README.de.md  README.md  analyzer.py  audioengine.py  build.py  components.py  main.py  mp3.py  pyproject.toml  settings.py  theme.py  version.rc  version.txt  visualizer_real.bkp
.github/workflows/: build-app.yml  python-app.yml  release-app.yml
assets/icons/DARK/: index.theme
assets/icons/LIGHT/: index.theme
components/: CategorySlider.py  QJumpSlider.py  QToggle.py  StarRating.py  Visualizer.py  VisualizerWidget.py  VolumeSlider.py  charts.py  dialogs.py  effects.py  files.py  filter.py  layouts.py  lights.py  models.py  player.py  sliders.py  songs.py  tables.py  visualizer.py  widgets.py
config/: log.py  settings.py  theme.py  utils.py
locales/de/LC_MESSAGES/: DungeonTuber.mo  DungeonTuber.po
locales/en/LC_MESSAGES/: DungeonTuber.mo  DungeonTuber.po
locales/es/LC_MESSAGES/: DungeonTuber.mo  DungeonTuber.po
logic/: analyzer.py  audioengine.py  lightengine.py  mp3.py
tests/: test_logic.py
