[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["logic", "config", "components"]

[project]
name = "DungeonTuber"
version = "0.2.0.0"
description = "RPG music player wit advanced categorization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Gandulf Kohlweiss", email = "gandulf.k@gmail.com"}
]
dependencies = [
    "mutagen>=1.47.0",
    "PySide6_Essentials>=6.10.1",
    "shiboken6>=6.10.1",
    "sortedcontainers>=2.4.0",
    "python-vlc>=3.0.21203"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.17.0",
    "flake8>=7.3.0",
    "Nuitka>=2.8.10"
]

[project.scripts]
dungeontuber = "DungeonTuber:main"
