[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["logic", "config", "components"]

[project]
name = "DungeonTuber"
version = "0.2.0.0"
description = "RPG music player wit advanced categorization"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Gandulf Kohlweiss", email = "gandulf.k@gmail.com"}
]
dependencies = [
    "mutagen>=1.47.0",
    "pyside6-essentials==6.11.0",
    "shiboken6>=6.11.0",
    "sortedcontainers>=2.4.0",
    "python-vlc>=3.0.21203",
    "psutil>=7.2.2",
    "pywizlight>=0.6.3"
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.19.0",
    "flake8>=7.3.0",
    "Nuitka[app]>=4.0.8"
]

[project.scripts]
dungeontuber = "DungeonTuber:main"
